nginx-test-app/nginx-test-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-app
  namespace: netology
  labels:
    app: nginx-test-app 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-test-app 
  template:
    metadata:
      labels:
        app: nginx-test-app
    spec:
      containers:
      - name: nginx-test-app
        image: tud777777/devops_diplom:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
