nginx-test-app/nginx-test-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-app-service
  namespace: netology
spec:
  selector:
    app: nginx-test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
